--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -60,7 +60,7 @@ jobs:
           mkdir Configure\Artifacts\Release\x64
           cp cfg/Configure.Release.x64.exe Configure\Artifacts\Release\x64
           cd Configure\Artifacts\Release\x64
-          Configure.Release.x64.exe /noWizard /VS2022 /x64 /static /noHdri /Q16 /openPolicy /incompatibleLicense /includeOptional
+          Configure.Release.x64.exe /noWizard /VS2022 /x64 /static /noHdri /Q16 /openPolicy /incompatibleLicense /includeOptional /onlyMagick
           
      
 
