--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -90,6 +90,8 @@ jobs:
           mv ./Artifacts/include ./package/
           mv ./Artifacts/lib  ./package/vc_lib
           cp -r ./ImageMagick/Magick++/lib/Magick++ ./package/
+          cp -r ./ImageMagick/MagickCore ./package/
+          cp -r ./ImageMagick/MagickWand ./package/
           #mv ./include ./package/
           #mv ./lib/vc_lib ./package/
           Get-ChildItem -Path ./package/vc_lib -Filter *.pdb -Recurse | Remove-Item -Force
@@ -106,6 +108,8 @@ jobs:
           mkdir -p package
           mv ./Artifacts/include ./package/
           mv ./Artifacts/lib  ./package/vc_lib
+          cp -r ./ImageMagick/MagickCore ./package/
+          cp -r ./ImageMagick/MagickWand ./package/
           cp -r ./ImageMagick/Magick++/lib/Magick++ ./package/
           # mv ./include ./package/
           # mv ./lib/vc_lib ./package/
@@ -123,6 +127,8 @@ jobs:
           mkdir -p package
           mv ./Artifacts/include ./package/
           mv ./Artifacts/lib  ./package/vc_x64_lib
+          cp -r ./ImageMagick/MagickCore ./package/
+          cp -r ./ImageMagick/MagickWand ./package/
           cp -r ./ImageMagick/Magick++/lib/Magick++ ./package/
           # mv ./include ./package/
           # mv ./lib/vc_x64_lib ./package/
@@ -140,6 +146,8 @@ jobs:
           mkdir -p package
           mv ./Artifacts/include ./package/
           mv ./Artifacts/lib  ./package/vc_x64_lib
+          cp -r ./ImageMagick/MagickCore ./package/
+          cp -r ./ImageMagick/MagickWand ./package/
           cp -r ./ImageMagick/Magick++/lib/Magick++ ./package/
           # mv ./include ./package/
           # mv ./lib/vc_x64_lib ./package/
